# open-agent-trust-registry

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: manifest-compiler.yml  release.yml  verify-registration.yml
cli/: package-lock.json  package.json  test-issuer.key
cli/src/: index.ts
docs/: multi-sig-ceremony.md
papers/: build-pdf.py  composable-agent-trust-stack.html  composable-agent-trust-stack.md
registry/: manifest.json  revocations.json  root-keys.json
registry/issuers/: agent-passport-system.json  agentgraph.json  agentinternetruntime.json  agora.json  arcede.json  arkforge.json  hive-civilization.json  insumerapi.json  nobulex.json  sint-protocol.json
registry/proofs/: agent-passport-system.proof  agentgraph.proof  agentid.proof  agora.proof  arkforge.proof  hive-civilization.proof  insumerapi.proof  nobulex.proof  sint-protocol.proof
sdk/python/: README.md  pyproject.toml
sdk/python/src/open_agent_trust/: __init__.py  types.py  verify.py
sdk/python/tests/: test_verify.py
sdk/swift/: Package.resolved  Package.swift
sdk/typescript/: package-lock.json  package.json  root-keys.json  tsconfig.json
server/: package-lock.json  package.json
server/src/: index.ts
spec/: 01-data-model.md  02-registration.md  03-verification.md  04-key-rotation.md  05-revocation.md  06-mirroring.md  07-attestation-format.md  08-security-model.md  09-service-integration.md  10-encrypted-transport.md  11-proof-of-key-ownership.md
(+28 files in other folders)
